--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/index.js\"",
+    "start": "node ./dist/index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,13 @@
     "express": "4.18.2"
   },
   "devDependencies": {
+    "@types/express": "4.17.17",
+    "@types/node": "18.14.6",
+    "concurrently": "^7.6.0",
     "eslint": "8.35.0",
     "nodemon": "2.0.21",
-    "standard": "17.0.0"
+    "standard": "17.0.0",
+    "typescript": "4.9.5"
   },
   "eslintConfig": {
     "extends": "standard"
