--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/index.js\"",
+    "dev": "concurrently \"tsc --watch\" \"nodemon -q ./dist/index.js\"",
     "start": "node ./dist/index.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,13 +19,20 @@
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/node": "18.14.6",
-    "concurrently": "^7.6.0",
+    "concurrently": "7.6.0",
     "eslint": "8.35.0",
     "nodemon": "2.0.21",
-    "standard": "17.0.0",
+    "ts-standard": "12.0.2",
     "typescript": "4.9.5"
   },
   "eslintConfig": {
-    "extends": "standard"
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "ignorePatterns": [
+      "dist",
+      "src/**/*.js"
+    ],
+    "extends": "./node_modules/ts-standard/eslintrc.json"
   }
 }
