--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,14 @@
     "baseUrl": "./src",
     "outDir": "./dist",
     "target": "es6",
-    "module": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
   }
 }
