--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc --watch\" \"nodemon -q ./dist/index.js\"",
+    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
     "start": "node ./dist/index.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "picocolors": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
@@ -22,7 +23,9 @@
     "concurrently": "7.6.0",
     "eslint": "8.35.0",
     "nodemon": "2.0.21",
+    "ts-node-dev": "2.0.0",
     "ts-standard": "12.0.2",
+    "tsconfig-paths": "4.1.2",
     "typescript": "4.9.5"
   },
   "eslintConfig": {
