--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register ./src/index.ts",
     "start": "node ./dist/index.js",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,13 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "1.35.0",
     "express": "4.18.2",
+    "http-status-codes": "2.2.0",
+    "multer": "1.4.5-lts.1",
+    "node-fetch": "2.6.9",
     "picocolors": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
+    "@types/multer": "1.4.7",
     "@types/node": "18.14.6",
-    "concurrently": "7.6.0",
+    "@types/node-fetch": "^2.6.2",
+    "dotenv": "16.0.3",
     "eslint": "8.35.0",
     "nodemon": "2.0.21",
     "ts-node-dev": "2.0.0",
